[tool.poetry]
name = "wechatpy"
version = "2.0.0.alpha26"
description = "WeChat SDK for Python"
authors = ["messense <messense@icloud.com>"]
license = "MIT"
readme = 'README.md'
keywords = ["wechat", "weixin", "wechat SDK", "weixin SDK"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
repository = "https://github.com/wechatpy/wechatpy.git"
homepage = "https://github.com/wechatpy/wechatpy"
documentation = "http://docs.wechatpy.org"

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = ">=2.31.0"
xmltodict = ">=0.13.0"
optionaldict = ">=0.1.0"
python-dateutil = ">=2.8.2"
cryptography = ">=41.0.7"
dataclasses = "^0.7"
requests-pkcs12 = "^1.22"
httpx = "^0.27.2"
httpx-pkcs12 = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httmock = "^1.4.0"
coverage = "^6.1.2"
redis = "^3.5.3"
pymemcache = "^3.5.0"

[tool.poetry.urls]
issues = "https://github.com/whitemay/wechatpy/issues"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

